fix api for user-friendly usage